fix alignment of color swatches

--- a/src/styles/color-swatch.css
+++ b/src/styles/color-swatch.css
@@ -1,15 +1,26 @@
 .color-box {
-    height: 250px;
-    width: 250px;
+    height: 130px;
+    width: 200px;
     border-right-style: solid;
     border-right-width: 10px;
     border-bottom-style: solid;
     border-bottom-width: 10px;
+    border-top-style: solid;
+    border-top-width: 10px;
+    border-left-style: solid;
+    border-left-width: 10px;
 }
 
 .color-label {
+    height: 50px;
     border-bottom-style: solid;
     border-bottom-width: 10px;
     border-right-style: solid;
     border-right-width: 10px;
+    border-left-style: solid;
+    border-left-width: 10px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
