--- a/src/styles/color-swatches.css
+++ b/src/styles/color-swatches.css
@@ -1,5 +1,6 @@
 .color-swatches-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    margin-top: 100px;
 }
