--- a/src/styles/top-bar.css
+++ b/src/styles/top-bar.css
@@ -3,14 +3,16 @@
     border-width: 10px;
     height: 100px;
     display: flex;
-    font-size: 45px;
+    font-size: 50px;
     align-items: center;
     justify-content: center;
 }
 
 .dateTimeContainer {
+    width: 35%;
     display: flex;
     align-items: center;
+    justify-content: center;
     border-right-style: solid;
     border-right-width: 10px;
     height: 60px;
@@ -18,7 +20,9 @@
 }
 
 .gpsContainer {
+    width: 65%;
     display: flex;
     align-items: center;
+    justify-content: center;
     padding: 25px;
 }
